# evaluate-alignments

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: ci_coverage.yml  ci_license.yml
include/: configuration.hpp  missed_match_profile.hpp  search_accuracy.hpp
include/accuracy/: blast_match.hpp  search_accuracy.hpp
include/argument_parsing/: accuracy_arguments.hpp
include/utilities/: shared.hpp
include/utilities/consolidate/: consolidate_matches.hpp  io.hpp  stellar_match.hpp
include/valik/: shared.hpp
include/valik/argument_parsing/: validators.hpp
include/valik/split/: metadata.hpp  minimal_metadata.hpp  split.hpp  write_seg_sequences.hpp
src/: CMakeLists.txt  consolidate_matches.cpp  main.cpp  search_accuracy.cpp
test/: CMakeLists.txt  api_matches_overlap_test.cpp  cli_alignment_evaluation_test.cpp  cli_argument_parsing_test.cpp
test/data/: blast_to_gff.sh  create_test_output.sh  datasources.cmake  test.gff  test.only.gff  test_gff_vs_gff_o10.fn.gff  test_gff_vs_gff_o10.fp.gff  test_gff_vs_gff_o100.fn.gff  test_gff_vs_gff_o100.fp.gff  test_txt_vs_gff_o10.fn.txt  test_txt_vs_gff_o10.fp.gff  test_txt_vs_gff_o100.fn.txt  test_txt_vs_gff_o100.fp.gff  truth.gff  truth.only.gff  truth.only.txt  truth.txt
